assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Cinzel:900|Montserrat|Rubik+Mono+One');


body{
	color: #dbdada;
	font-family: "Montserrat";
	
	background-color: #1f1f1f;

}

h1 {
	text-align: center;
	text-transform: uppercase;
	font-family: 'Rubik Mono One'; 

	text-shadow: 2px 2px 4px #444444;
}

/********NAVBAR********/
.navbar{
	text-transform: uppercase;
	font-family: "Rubik Mono One";
	
	
	
}
.navbar-dark {
	background-color: #1f1f1f !important;
}

@media (max-width:767px) {
	.navbar-dark {
		background-color: #ffffff00 !important;
	}
	a.nav-link {
		
	}
}

/********LANDING-VIEW********/

@media(max-width:1090px){
	header {
		background-image: url("../images/background/landing2_cropped.jpg");
		background-position: left;
	}
}

@media(min-width:1091px){
	header {
		background-image: url("../images/background/landing2.jpg");
		background-position: top;
	}
}
header{
	background-repeat: no-repeat;
	
	background-size: cover;
	-webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;

	height: 100vh;
}

header > h1 {
	color: white;
	font-size: 4em;
	font-family: 'Cinzel';
	font-weight: bold;

	text-shadow: 2px 2px 4px #555555;

    position: absolute;
    top:  50%;
    left: 50%;
    transform: translate(-50%,-50%);
}

/********ABOUT********/

#about {
	
	background-color: #000000;
}

#img-top {
	padding: 0;
}

.about-container {
	
	
}
/* Read more... link */
.about-link {
	color: #dbdada;
	text-decoration: none;
}
.about-link:hover {
	color: #ffffff;
	text-decoration: none;	
}

.modal-body {
	background-color: black !important;
}

.modal-body > h5 {
	font-weight: bold;
}

.modal-header {
	background-color: black !important;
}

.modal-footer {
	background-color: #000000;
	border-top: 0 none;
}

/* modal close button */

.modal-footer > .btn {
	color: #dbdada;
	background-color: #1f1f1f;
	border-color: #9b9b9b;
	border-radius: 5px;
}

.modal-footer > .btn:focus, .btn:hover{
	background-color: #000000 !important;
	border-color: #9b9b9b !important;
	box-shadow:none !important;
}


/********PHOTO********/

#photo {
	background: #000000;
	padding-top: 66px;
}

.carousel-inner img {
	width: 100%;
	height: 100%;
}

/********MUSIC********/

#music {
	background-color: #1f1f1f;
	padding: 66px 0px 0px 0px;
}

@media (max-width:768px) {
	.albums > .col-sm-12 {
		padding: 0px 50px 30px 50px;
	}
}

@media (min-width:769px) {
	.albums > .col-md-6 {
		padding-bottom: 30px;
	}
}

@media (min-width:1200px) {
	.albums > .col-lg-3 {
		padding-bottom: 30px;
	}
}

.album-cover > img {
	-webkit-box-shadow: 0px 0px 15px 0px rgba(70,70,70,1);
	-moz-box-shadow: 0px 0px 15px 0px rgba(70,70,70,1);
	box-shadow: 0px 0px 15px 0px rgba(70,70,70,1);
}



/* responsive spotify player, source: http://jsfiddle.net/JMPerez/qa73L/ */
.embed-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
    height: auto;
}
    .embed-container iframe,
    .embed-container object,
    .embed-container embed {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }

/* changes the height of the player and removes the scroll bar */
@media (min-width:769px) {
	.embed-container {
		padding-bottom: 400px;
	}
}

/********VIDEO********/
#video{
	padding-top: 66px;
}

/********TOUR********/
#tour {
	padding-top: 66px;
	padding-bottom: 50px;
	
	text-transform: uppercase;
	font-family: 'Montserrat';
	font-weight: bold;

	line-height: 2;
}

.tour-dates {
	padding-top: 25px;
}

/* grid styling */
.tour-dates > .row {
	padding: 10px 0px 10px 0px;
}

.tour-dates > .row:nth-of-type(2n+1) {
	background-color: #303030;
	padding: 10px 0px 10px 0px;
}

@media(max-width:991px){
	.tour-dates > .row > div {
		text-align: center;
	}	
}

/* tickets button */
.btn-buy {
	color: #dbdada;
	border-radius: 15px !important;
	background-color: #808080 !important;
	
}
.btn-buy:hover{
	background-color: #575757 !important;
}

.btn-buy:focus{
	background-color: #333333 !important;
	box-shadow:none !important;
}

/********FOLLOW********/

.icons a {
	color: #7a7a7a;

	font-size: 40px;
	padding-right: 20px;
	
	transition: all .5s ease;
}

.icons a:nth-child(3){
	padding-right: 60px;
}

.icons a:hover {
	color: white;
}

